# rust-idx-test

./: Cargo.toml  federal_rules.json  federal_rules.md
.idx/: dev.nix
src/: main.rs
